--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
          style="background-color: rgba(0, 0, 0, 0.2)"
          >
       © 2022 Copyright:
-      <a class="text-white" href="https://mdbootstrap.com/"
+      <a class="text-white" href="http://niteshmint.pythonanywhere.com/"
          >DMC.com</a
         >
     </div>
