--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-0 py-3">
         <div class="container-xl bg-dark">
           <!-- Logo -->
-            <a class="navbar-brand fs-3 me-1 display-4" href="#" id="logo">
-                <img src="https://damakcampus.edu.np/content/uploads/images/viber_image_2021-03-21_12-41-55.jpg" class="h-8" alt="...">
+            <a class="navbar-brand fs-3 me-1 display-4 text-success flex-column" href="#" id="logo">
+                <img src="https://damakcampus.edu.np/content/uploads/images/viber_image_2021-03-21_12-41-55.jpg" class="h-20" alt="...">
                 DMC
             </a>
           <!-- Navbar toggle -->
@@ -26,14 +26,14 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <!-- Collapse -->
-          <div class="collapse navbar-collapse" id="navbarCollapse">
+          <div class="collapse navbar-collapse ps-8" id="navbarCollapse">
             <!-- Nav -->  
             <div class="navbar-nav mx-lg-auto">
-              <a class="nav-item nav-link fs-5 active" href="#">Home</a>
-              <a class="nav-item nav-link fs-5" href="#">Program</a>
-              <a class="nav-item nav-link fs-5" href="#">Articles</a>
-              <a class="nav-item nav-link fs-5" href="#">Contact Us</a>
-              <a class="nav-item nav-link fs-5" href="#">FAQ</a>
+              <a class="nav-item nav-link fs-5 btn btn-success" href="#">Home</a>
+              <a class="nav-item nav-link fs-5 btn btn-outline-success  " href="#">Program</a>
+              <a class="nav-item nav-link fs-5 btn btn-outline-success" href="#">Articles</a>
+              <a class="nav-item nav-link fs-5 btn btn-outline-success" href="#">Contact Us</a>
+              <a class="nav-item nav-link fs-5 btn btn-outline-success" href="#">FAQ</a>
             </div>
           </div>
         </div>
@@ -59,12 +59,12 @@
                     <li>Well equipped and separate spacious laboratories for physics</li>
                     <li>Spacious computer lab with free computer training and internet facilities</li>
                 </ul>
-                <a href="#" class="btn btn-outline-light">Read More</a>
+                <a href="#" class="btn btn-outline-success">Read More</a>
               </div>
           </div>
       </div>
   </div>
-
+  
 
 <div class="my-8 ">
  <!-- Footer -->
@@ -75,10 +75,10 @@
     <!-- Section: Social media -->
     <section
              class="d-flex justify-content-between p-4"
-             style="background-color: #6351ce"
+             style="background-color: #198754"
              >
       <!-- Left -->
-      <div class="me-5">
+      <div class="fs-5 fw-bolder ">
         <span>More About Us Below:</span>
       </div>
       <!-- Left -->
@@ -116,11 +116,10 @@
           <!-- Grid column -->
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
             <!-- Content -->
-            <h6 class="text-uppercase fw-bold text-danger">About</h6>
+            <h6 class="text-uppercase fw-bold text-success">About</h6>
             <hr
                 class="mb-4 mt-0 d-inline-block mx-auto"
-                style="width: 60px; background-color: #7c4dff; height: 2px"
-                />
+                style="width: 60px; background-color: #7c4dff; height: 2px"/>
             <p>
               Damak Multiple Campus is a reputed community campus well recognized by the community. The management body of the campus represents this wide spectrum of the socio-political sphere, which is fully inclusive.
             </p>
@@ -128,7 +127,7 @@
           <!-- Grid column -->
           <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
-            <h6 class="text-uppercase fw-bold text-danger">Useful links</h6>
+            <h6 class="text-uppercase fw-bold text-success">Useful links</h6>
             <hr
                 class="mb-4 mt-0 d-inline-block mx-auto"
                 style="width: 60px; background-color: #7c4dff; height: 2px"
@@ -151,7 +150,7 @@
           <!-- Grid column -->
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
             <!-- Links -->
-            <h6 class="text-uppercase fw-bold text-danger">Contact</h6>
+            <h6 class="text-uppercase fw-bold text-success">Contact</h6>
             <hr
                 class="mb-4 mt-0 d-inline-block mx-auto"
                 style="width: 60px; background-color: #7c4dff; height: 2px"
@@ -162,7 +161,7 @@
             <p><i class="mr-3"></i>023-580132 / 580528</p>
           </div>
           <!-- Grid column -->
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3565.6847066345235!2d87.68366571379747!3d26.658575683237693!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39e58e3d12958f45%3A0x116ac5ec99c5b042!2sDamak%20Multiple%20Campus!5e0!3m2!1sen!2snp!4v1667613631699!5m2!1sen!2snp" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3565.6847066345235!2d87.68366571379747!3d26.658575683237693!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39e58e3d12958f45%3A0x116ac5ec99c5b042!2sDamak%20Multiple%20Campus!5e0!3m2!1sen!2snp!4v1667613631699!5m2!1sen!2snp" width="400" height="400" style="border:1px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <!-- Grid row -->
       </div>
