--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-0 py-3">
         <div class="container-xl bg-dark">
           <!-- Logo -->
-            <a class="navbar-brand fs-3 me-1 display-4 text-success flex-column" href="#" id="logo">
+            <a class="navbar-brand fs-3 me-1 display-4 text-success flex-column pe-8" href="#" id="logo">
                 <img src="https://damakcampus.edu.np/content/uploads/images/viber_image_2021-03-21_12-41-55.jpg" class="h-20" alt="...">
-                DMC
+                Damak Multiple Campus
             </a>
           <!-- Navbar toggle -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,11 +29,11 @@
           <div class="collapse navbar-collapse ps-8" id="navbarCollapse">
             <!-- Nav -->  
             <div class="navbar-nav mx-lg-auto">
-              <a class="nav-item nav-link fs-5 btn btn-success" href="#">Home</a>
-              <a class="nav-item nav-link fs-5 btn btn-outline-success  " href="#">Program</a>
-              <a class="nav-item nav-link fs-5 btn btn-outline-success" href="#">Articles</a>
-              <a class="nav-item nav-link fs-5 btn btn-outline-success" href="#">Contact Us</a>
-              <a class="nav-item nav-link fs-5 btn btn-outline-success" href="#">FAQ</a>
+              <a class="nav-item nav-link fs-5  btn-outline-success" href="#">Home</a>
+              <a class="nav-item nav-link fs-5  btn-outline-success  " href="#">Program</a>
+              <a class="nav-item nav-link fs-5  btn-outline-success" href="#">Articles</a>
+              <a class="nav-item nav-link fs-5  btn-outline-success" href="#">Contact Us</a>
+              <a class="nav-item nav-link fs-5  btn-outline-success" href="#">FAQ</a>
             </div>
           </div>
         </div>
