changed some colors

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-0 py-3">
         <div class="container-xl bg-dark">
           <!-- Logo -->
-            <a class="navbar-brand fs-3 me-1 display-4 text-success flex-column pe-8" href="#" id="logo">
+            <a class="navbar-brand fs-3 me-1 display-4 text-success flex-column pe-5" href="#" id="logo">
                 <img src="https://damakcampus.edu.np/content/uploads/images/viber_image_2021-03-21_12-41-55.jpg" class="h-20" alt="...">
                 Damak Multiple Campus
             </a>
@@ -26,7 +26,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <!-- Collapse -->
-          <div class="collapse navbar-collapse ps-8" id="navbarCollapse">
+          <div class="collapse navbar-collapse ps-8 ms-4" id="navbarCollapse">
             <!-- Nav -->  
             <div class="navbar-nav mx-lg-auto">
               <a class="nav-item nav-link fs-5  btn-outline-success" href="#">Home</a>
@@ -66,16 +66,15 @@
   </div>
   
 
-<div class="my-8 ">
+<div class="my-8">
  <!-- Footer -->
   <footer
-          class="text-center text-lg-start text-white"
-          style="background-color: #1c2331"
-          >
+          class="text-center text-lg-start text-white bg-gradient"
+          style="background-color: rgb(8, 94, 61);">
     <!-- Section: Social media -->
     <section
              class="d-flex justify-content-between p-4"
-             style="background-color: #198754"
+             style="background-color: #184832"
              >
       <!-- Left -->
       <div class="fs-5 fw-bolder ">
@@ -116,10 +115,10 @@
           <!-- Grid column -->
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
             <!-- Content -->
-            <h6 class="text-uppercase fw-bold text-success">About</h6>
-            <hr
+            <h6 class="text-uppercase fw-bolder text-light fs-5">About</h6>
+            <hr 
                 class="mb-4 mt-0 d-inline-block mx-auto"
-                style="width: 60px; background-color: #7c4dff; height: 2px"/>
+                style="width: 69px; background-color: white; height: 2px"/>
             <p>
               Damak Multiple Campus is a reputed community campus well recognized by the community. The management body of the campus represents this wide spectrum of the socio-political sphere, which is fully inclusive.
             </p>
@@ -127,10 +126,10 @@
           <!-- Grid column -->
           <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
-            <h6 class="text-uppercase fw-bold text-success">Useful links</h6>
+            <h6 class="text-uppercase fw-bold text-light fs-5">Useful links</h6>
             <hr
                 class="mb-4 mt-0 d-inline-block mx-auto"
-                style="width: 60px; background-color: #7c4dff; height: 2px"
+                style="width: 130px; background-color: white; height: 2px"
                 />
             <p>
               <a href="#!" class="text-white">Home</a>
@@ -150,10 +149,10 @@
           <!-- Grid column -->
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
             <!-- Links -->
-            <h6 class="text-uppercase fw-bold text-success">Contact</h6>
+            <h6 class="text-uppercase fw-bold text-light fs-5">Contact</h6>
             <hr
                 class="mb-4 mt-0 d-inline-block mx-auto"
-                style="width: 60px; background-color: #7c4dff; height: 2px"
+                style="width: 10  0px; background-color: white; height: 2px"
                 />
             <p><i class="fas fa-home mr-3"></i>Damak-9,Jhapa</p>
             <p><i class="fas fa-envelope mr-3"></i>info@damakcampus.edu.np</p>
