--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+    <link href="https://fonts.cdnfonts.com/css/proxima-nova-2" rel="stylesheet">
     <style>
         @import url(https://unpkg.com/@webpixels/css@1.0/dist/index.css);
+        @import url('https://fonts.cdnfonts.com/css/proxima-nova-2');
     </style>
 </head>
 <body class="bg-dark bg-gradient" style="font-family: Poppins;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-0 py-3">
         <div class="container-xl bg-dark">
           <!-- Logo -->
-            <a class="navbar-brand fs-3 me-1 display-4 text-success flex-column pe-5" href="#" id="logo">
+            <a class="navbar-brand fs-2 me-1 display-4 flex-column pe-5" href="#" id="logo"
+            style="font-family: 'Proxima Nova', sans-serif;
+                  color:white;">
                 <img src="https://damakcampus.edu.np/content/uploads/images/viber_image_2021-03-21_12-41-55.jpg" class="h-20" alt="...">
                 Damak Multiple Campus
             </a>
