--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <h6 class="text-uppercase fw-bold text-light fs-5">Contact</h6>
             <hr
                 class="mb-4 mt-0 d-inline-block mx-auto"
-                style="width: 10  0px; background-color: white; height: 2px"
+                style="width: 100px; background-color: white; height: 2px"
                 />
             <p><i class="fas fa-home mr-3"></i>Damak-9,Jhapa</p>
             <p><i class="fas fa-envelope mr-3"></i>info@damakcampus.edu.np</p>
