--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
     <link href="https://fonts.cdnfonts.com/css/proxima-nova-2" rel="stylesheet">
     <style>
-        @import url(https://unpkg.com/@webpixels/css@1.0/dist/index.css);
+        @import url('https://unpkg.com/@webpixels/css@1.0/dist/index.css');
         @import url('https://fonts.cdnfonts.com/css/proxima-nova-2');
+        #navbar{
+          opacity: 0.9; 
+          filter:(opacity=50);
+        }     
     </style>
 </head>
 <body class="bg-dark bg-gradient" style="font-family: Poppins;">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-0 py-3">
-        <div class="container-xl bg-dark">
+    <nav class="navbar navbar-expand-lg  navbar-dark bg-dark px-0 py-3 sticky-top" id="navbar">
+        <div class="container-xl bg-dark pe-5">
           <!-- Logo -->
             <a class="navbar-brand fs-2 me-1 display-4 flex-column pe-5" href="#" id="logo"
             style="font-family: 'Proxima Nova', sans-serif;
@@ -27,26 +31,54 @@
             </a>
           <!-- Navbar toggle -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span>   
           </button>
           <!-- Collapse -->
-          <div class="collapse navbar-collapse ps-8 ms-4" id="navbarCollapse">
+        <div class="collapse navbar-collapse ps-8 ms-4" id="navbarCollapse">
             <!-- Nav -->  
-            <div class="navbar-nav mx-lg-auto">
-              <a class="nav-item nav-link fs-5  btn-outline-success" href="#">Home</a>
-              <a class="nav-item nav-link fs-5  btn-outline-success  " href="#">Program</a>
-              <a class="nav-item nav-link fs-5  btn-outline-success" href="#">Articles</a>
-              <a class="nav-item nav-link fs-5  btn-outline-success" href="#">Contact Us</a>
-              <a class="nav-item nav-link fs-5  btn-outline-success" href="#">FAQ</a>
-            </div>
+          <div class="navbar-nav mx-lg-auto">
+            <a class="nav-item nav-link fs-5  btn-outline-success" href="#">Home</a>
+            <a class="nav-item nav-link fs-5  btn-outline-success  " href="#">Program</a>
+            <a class="nav-item nav-link fs-5  btn-outline-success" href="#">Articles</a>
+            <a class="nav-item nav-link fs-5  btn-outline-success" href="#">Contact Us</a>
+            <a class="nav-item nav-link fs-5  btn-outline-success" href="#">FAQ</a>
           </div>
         </div>
-      </nav>
+      </div>
+    </nav>
 <!--Body-->
-      <div class="mt-8 pt-5">
-        <h3 class="fs-5 fw-bolder text-center lead font-italic text-success"> <q>Quality Assurance Accreditation (QAA) Certified Campus</q></h3>
-      </div> 
-    <div class="mt-8 pb-5 ms-5">
+<div class="mt-8">
+  <h3 class="fs-4 fw-bolder text-center lead font-italic text-success mb-5  "> <q>Quality Assurance Accreditation (QAA) Certified Campus</q></h3>
+</div> 
+<!-- carousel -->
+<center>
+  <div id="carouselExampleInterval" class="carousel slide carousel-size pb-5" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="1000">
+        <img src="https://damakcampus.edu.np/content/uploads/sliderImages/slide2.jpg" class="d-block w-75 border-5" alt="slider img">
+      </div>
+      <div class="carousel-item" data-bs-interval="1000">
+        <img src="" class="d-block w-75 border-5" alt="slider img">
+      </div>
+      <div class="carousel-item">
+        <img src="https://damakcampus.edu.np/content/uploads/sliderImages/slide2.jpg" class="d-block w-75 border-5" alt="slider img">
+      </div>
+      <div class="carousel-item">
+        <img src="https://damakcampus.edu.np/content/uploads/sliderImages/slide2.jpg" class="d-block w-75 border-5" alt="slider img">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+</center>
+
+    <div class="mt-8 pb-5 pt-5 container-fluid">
         <div class="row">
           <div class="col-lg-6 pt-5">
             <img class="w-100 shadow border-5" src="https://damakcampus.edu.np/content/uploads/sliderImages/a.jpg"/>
@@ -81,38 +113,14 @@
              style="background-color: #184832"
              >
       <!-- Left -->
-      <div class="fs-5 fw-bolder ">
+      <div class="fs-5 fw-bolder">
         <span>More About Us Below:</span>
       </div>
       <!-- Left -->
-
-      <!-- Right -->
-      <div>
-        <a href="" class="text-white me-4">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="" class="text-white me-4">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a href="" class="text-white me-4">
-          <i class="fab fa-google"></i>
-        </a>
-        <a href="" class="text-white me-4">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a href="" class="text-white me-4">
-          <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="" class="text-white me-4">
-          <i class="fab fa-github"></i>
-        </a>
-      </div>
-      <!-- Right -->
     </section>
-    <!-- Section: Social media -->
 
     <!-- Section: Links  -->
-    <section class="">
+    <section>
       <div class="container text-center text-md-start mt-5">
         <!-- Grid row -->
         <div class="row mt-3">
