--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <img src="https://damakcampus.edu.np/content/uploads/sliderImages/slide2.jpg" class="d-block w-75 border-5" alt="slider img">
       </div>
       <div class="carousel-item" data-bs-interval="1000">
-        <img src="" class="d-block w-75 border-5" alt="slider img">
+        <img src="https://damakcampus.edu.np/content/uploads/sliderImages/slide4.jpg" class="d-block w-75 border-5" alt="slider img">
       </div>
       <div class="carousel-item">
         <img src="https://damakcampus.edu.np/content/uploads/sliderImages/slide2.jpg" class="d-block w-75 border-5" alt="slider img">
