--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
         <img src="https://damakcampus.edu.np/content/uploads/sliderImages/slide2.jpg" class="d-block w-75 border-5" alt="slider img">
       </div>
       <div class="carousel-item" data-bs-interval="1000">
+        <img src="https://damakcampus.edu.np/content/uploads/sliderImages/slide1.jpg" class="d-block w-75 border-5" alt="slider img">
+      </div>
+      <div class="carousel-item" data-bs-interval="1000">
         <img src="https://damakcampus.edu.np/content/uploads/sliderImages/slide4.jpg" class="d-block w-75 border-5" alt="slider img">
       </div>
-      <div class="carousel-item">
-        <img src="https://damakcampus.edu.np/content/uploads/sliderImages/slide2.jpg" class="d-block w-75 border-5" alt="slider img">
-      </div>
-      <div class="carousel-item">
-        <img src="https://damakcampus.edu.np/content/uploads/sliderImages/slide2.jpg" class="d-block w-75 border-5" alt="slider img">
+      <div class="carousel-item" data-bs-interval="1000">
+        <img src="https://damakcampus.edu.np/content/uploads/sliderImages/volleyball-team-girls.png" class="d-block w-75 border-5" alt="slider img">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
